fixed nav covering banner

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
-
 :root {
   /* colors */
   --primary-color: rgb(230, 173, 182);
@@ -55,11 +53,11 @@ html {
 }
 
 .container {
-  padding-top: 7rem;
+  padding: 5rem 1rem 0 1rem;
 }
 
 body {
-  margin: 0;
+  margin: 0 ;
   font-family: "Courier New", Courier, monospace;
   font-weight: 400;
   height: 100%;
@@ -73,9 +71,22 @@ main {
 .banner {
   display: flex;
   flex-direction: column;
-  height: 85vh;
+  /* height: 50vh; */
   align-items: center;
   justify-content: center;
+  padding: 2rem 1rem 0 1rem;
+}
+
+@media screen and (max-width: 731px){
+  .banner {
+    padding-top: 5rem;
+  }
+}
+
+@media screen and (max-width: 461px){
+  .banner {
+    padding-top: 8rem;
+  }
 }
 
 .banner h2 {
@@ -123,7 +134,7 @@ main {
   outline-offset: 2px;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .button {
     padding: 0.75rem 1.5rem;
   }
@@ -390,8 +401,6 @@ img {
   }
 }
 
-
-
 /* certifications wrap end */
 
 .primary-skills {
@@ -493,7 +502,7 @@ img {
   border-bottom-right-radius: var(--outline-radius);
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 650px) {
   .contact-container {
     display: grid;
     grid-auto-flow: column;
